@@ -2,8 +2,10 @@ It does not matter how slowly you go as long as you do not stop. -- Confucius
 
 Sat, Feb 7, 2008
 ---------------------------------------------------------------------
-- Created initial implementation of adding a new task.
+- Created initial implementation of adding a new task (all except specific date).
 - Refactored tasks code to simplify filtering.
+- Implemented flipping between dropdown and calendar popup.
+- Updated task related controller and view specs.
 
 Fri, Feb 6, 2008
 ---------------------------------------------------------------------
